# dbt-example

./: .gitignore  .sqlfluff  README.md  dbt_project.yml  dev.duckdb  packages.yml  profiles.yml  profiles.yml.example  pyproject.toml
.github/workflows/: production.yml  slim_ci.yml
analyses/: churn_cohort_analysis.sql  ltv_prediction_prep.sql
data/: salesforce_accounts.parquet  salesforce_opportunities.parquet  segment_identifies.parquet  segment_tracks.parquet  stripe_charges.parquet  stripe_customers.parquet  stripe_invoices.parquet  subscriptions.csv  subscriptions.parquet  usage_events.parquet  users.csv  users.parquet
macros/: calculate_mrr.sql  cents_to_dollars.sql  generate_schema_name.sql  get_subscription_status.sql
models/marts/finance/: _finance__exposures.yml  _finance__models.yml  dim_customers.sql  dim_subscriptions.sql  fct_mrr_daily.sql  fct_revenue.sql  fct_subscription_events.sql
models/marts/marketing/: _marketing__models.yml  dim_campaigns.sql  fct_customer_acquisition.sql  rpt_marketing_roi.sql
models/marts/product/: _product__models.yml  dim_users.sql  fct_events.sql  fct_user_engagement_daily.sql  rpt_feature_adoption.sql
models/staging/app_db/: _app_db__models.yml  _app_db__sources.yml  stg_app_db__subscriptions.sql  (+2 more)
scripts/: generate_test_data.py  setup_sources.sql
seeds/: plan_catalog.csv  product_features.csv  utm_channel_mapping.csv
snapshots/: subscription_pricing_snapshot.sql  user_plan_snapshot.sql
tests/: assert_mrr_never_negative.sql  assert_revenue_reconciliation.sql  assert_subscription_state_valid.sql
(+13 files in other folders)
